@@ -2,6 +2,7 @@ package org.springside.examples.showcase;
 
 import org.eclipse.jetty.server.Server;
 import org.springside.modules.test.jetty.JettyFactory;
+import org.springside.modules.test.spring.Profiles;
 
 /**
  * 使用Jetty运行调试Web应用, 在Console快速重载应用.
@@ -16,17 +17,18 @@ public class ShowcaseServer {
 
 	public static void main(String[] args) throws Exception {
 		// 设定Spring的profile
-		System.setProperty("spring.profiles.active", "development");
+		Profiles.setProfileAsSystemProperty(Profiles.DEVELOPMENT);
 
 		// 启动Jetty
 		Server server = JettyFactory.createServerInSource(PORT, CONTEXT);
 		JettyFactory.setTldJarNames(server, TLD_JAR_NAMES);
 
 		try {
-			server.start();
+			System.out.println("[HINT] Don't forget to set -XX:MaxPermSize=128m");
 
+			server.start();
 			System.out.println("Server running at http://localhost:" + PORT + CONTEXT);
-			System.out.println("Hit Enter to reload the application quickly");
+			System.out.println("[HINT] Hit Enter to reload the application quickly");
 
 			// 等待用户输入回车重载应用.
 			while (true) {
